# tk707-fixed

./: .gitignore  707.map  727.map  7b7.map  7c7.map  AUTHORS  BUGS  ChangeLog  INSTALL  INSTALL.texi  INSTALL.txt  Makefile.am  NEWS  README  TODO  acinclude.m4  binaire-tk.valid-dump  bootstrap  check.sh  configure.in  defs.tcl  element707.c  go  gpl.texi  gui.tcl  help.tcl  mkinstalldirs  nix_bit.h  play.c  ports.tcl  procs.tcl  score.fig  score_fig2tcl.sh  tcl2c.c  texi2help.l  texinfo.tex  title.fig  title_fig2tcl.sh  tk707.1  tk707.desktop  (+9 more)
